Update to fix display issue on Mobile device

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .main {
   background-color: #FFFFFF;
   padding: 120px 48px 48px;
+  width: 100%;
 }
